Run programe with security manager
and imports public key certificate in
receiver's keystore